maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:21: error: not enough arguments for method garM: (c: Int, b: Boolean)(Int, Boolean).
Unspecified value parameter b.
      k=garM(k)
            ^Escaper:25: error: not enough arguments for method garM: (c: Int, b: Boolean)(Int, Boolean).
Unspecified value parameter b.
    k=garM(k)
          ^